# routes/api.public.php
@@ -12,11 +12,13 @@ Route::prefix('public')->middleware('throttle:public-api')->group(function () {
     Route::get('organizations/{id}', [OrganizationController::class, 'show']);
     Route::get('organizations/{id}/calendar/{year}', [OrganizationController::class, 'calendar']);
     Route::get('organizations/{id}/contacts', [OrganizationController::class, 'contacts']);
+    Route::get('organizations/{id}/reports', [OrganizationController::class, 'reports']);
     Route::get('organizations/{id}/map', [OrganizationController::class, 'map']);
 
     Route::get('scammers/{id}', [ScammerController::class, 'show']);
     Route::get('scammers/{id}/calendar/{year}', [ScammerController::class, 'calendar']);
     Route::get('scammers/{id}/contacts', [ScammerController::class, 'contacts']);
+    Route::get('scammers/{id}/reports', [ScammerController::class, 'reports']);
     Route::get('scammers/{id}/map', [ScammerController::class, 'map']);
 
     Route::get('reports', [ReportController::class, 'index'])
